# MediBuddy-API

./: .gitignore  Makefile  README.md  alembic.ini  env.example  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/core/: config.py  database.py
app/models/: __init__.py  model.py  users.py
migrations/: env.py
migrations/versions/: a0c808241fd3_initial_migration.py
tests/: fixture.py
tests/models/: test_new.py
tests/utils/: docker_utils.py
