[project]
name = "medibuddy-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "email-validator==2.3.0",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.24",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "mangum==0.17.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "orjson==3.11.7",
    "packaging==26.0",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pydantic-settings==2.4.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-alembic==0.12.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.48",
    "starlette==0.37.2",
    "testcontainers==4.14.1",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "ujson==5.12.0",
    "urllib3==2.6.3",
    "uvicorn==0.30.1",
    "watchfiles==1.1.1",
    "wrapt==2.1.2",
]
